src/core-crm/objects/Distribution_Split__c/Distribution_Split__c.object-meta.xml
<CustomObject>
    <description>Distribution Split stores the information about how donation payments will be distributed to Finance GL Account(s).</description>
    <label>Distribution Split</label>
    <nameField>
        <displayFormat>DS-{000000}</displayFormat>
        <label>Distribution Split Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distributions Split</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>