src/core-crm/objects/Distribution_Split__c/fields/Distribution_Management__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Management__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the associated Distribution Management record.</description>
    <inlineHelpText>Lookup to the associated Distribution Management record.</inlineHelpText>
    <label>Distribution Management</label>
    <referenceTo>Distribution_Management__c</referenceTo>
    <relationshipLabel>Distributions Split</relationshipLabel>
    <relationshipName>Distributions_Split</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>