src/core-crm/objects/Distribution_Split__c/fields/Finance_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Finance_GL_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the associated GL Account record.</description>
    <inlineHelpText>Lookup to the associated GL Account record.</inlineHelpText>
    <label>Finance GL Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Finance_GL_Account__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Finance_GL_Account__c</referenceTo>
    <relationshipLabel>Distributions Split</relationshipLabel>
    <relationshipName>Distributions_Split</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>