src/core-crm/objects/Distribution_Split__c/fields/GL_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Code__c</fullName>
    <description>19-digit account code represents QUT’s Finance Chart of Accounts.</description>
    <formula>Finance_GL_Account__r.GL_Account_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>19-digit account code represents QUT’s Finance Chart of Accounts.</inlineHelpText>
    <label>GL Account Code</label>
    <type>Text</type>
</CustomField>