src/core-crm/objects/Distribution_Split__c/fields/Is_Soft_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Is_Soft_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the record is hidden from users in the DEP UI.</description>
    <inlineHelpText>Indicates if the record is hidden from users in the DEP UI.</inlineHelpText>
    <label>Is Soft Deleted</label>
    <type>Checkbox</type>
</CustomField>