src/core-crm/objects/Distribution_Split__c/fields/Migration_Id__c.field-meta.xml
<CustomField>
    <fullName>Migration_Id__c</fullName>
    <description>Used for data migration data movement framework</description>
    <externalId>true</externalId>
    <label>Migration ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>