src/core-crm/objects/Distribution_Split__c/fields/Participating_Group__c.field-meta.xml
<CustomField>
    <fullName>Participating_Group__c</fullName>
    <description>The name of the group the split applies to.</description>
    <inlineHelpText>The name of the group the split applies to.</inlineHelpText>
    <label>Participating Group</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>