src/core-crm/objects/Distribution_Split__c/fields/Percentage_Split__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Split__c</fullName>
    <description>The percentage amount for the split.</description>
    <inlineHelpText>The percentage amount for the split.</inlineHelpText>
    <label>Percentage Split</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>